--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,237 +1,5 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  /* font-family: Georgia, serif; */
-}
+header{
+  background-color:#dbdbdb;
 
-html {
-  font-size: 62.5%;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-
-
-.main-nav {
-  width: 100%;
-  height: 8rem;
-  display: grid;
-  grid-template-columns: 1rem 1fr 2fr 1rem;
-
-    background-color: #B6B8BB;
-    position: fixed;
-    top: 0;
-    left: 0;
-    
-}
-
-.logo {
-  display: grid;
-  grid-column: 2/3;
-  justify-content: start;
-  align-items: center;
-}
-
-.logo{
-
-}
-.menu-link {
-  grid-column: 3/4;
- 
-}
-
-.menu-link ul {
-  height: 8rem;
-  display: flex;
-  justify-content:end;
-  align-items: center;
-}
-
-
- .social-media {
-  grid-column: 3/4;
-}
- */
-
-
-
-
-.logo h2 span {
-  font-size: 3.5rem;
-}
-
-.menu-link ul li {
-  font-size: 1.8rem;
-  margin: 5px;
-}
-
-
-
-
-.social-media .hamburger-menu {
-  display: none;
-} 
-
-.menu-link button{
-
-  background-color: white;
-}
-@media (max-width: 1080px) {
-  .main-nav {
-    height: 8rem;
-    grid-template-columns: 1rem 1fr 2fr 1rem;
-  }
-
-  .logo,
-  .menu-link ul,
-  .social-media ul {
-    height: 8rem;
-  }
-}
-
-
-@media (max-width: 998px) {
-  .main-nav {
-    height: 7rem;
-    grid-template-columns: 1rem 1fr 2fr 2fr 2rem;
-  }
-
-  .menu-link {
-    display: none;
-  }
-
-  .logo,
-  .social-media ul {
-    height: 4rem;
-  }
-  .logo img{
-    height: 4rem;
-  }
-
-  .mobile-menu-link {
-    grid-column: 3/4;
-    position: relative;
-    z-index: 99;
-  }
-  .mobile-menu-link button{
-    background-color: white;
-    list-style: none;
-    font-size: 1rem;
-    
-  }
-  .mobile-menu-link button h1 {
-
-    font-size: 2rem;
-  }
-
-
-  .mobile-menu-link {
-    background-color: white;
-    height: 10rem;
-    display: grid;
-    grid-column: 2/5;
-    align-items: center;
-    padding-left: 0rem;
-    transition: all 2s linear;
-    transform-origin: top;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-      rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
-  }
-
-  .mobile-menu-link ul {
-    height: 20rem;
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
-    align-items: start;
-  }
-
-  .mobile-menu-link ul li:first-child {
-    transition-delay: 0.2s;
-  }
-
-  .social-media {
-    grid-row: 1/2;
-    grid-column: 3/5;
-    justify-items: end;
-    align-items: center;
-    transition: all 2s linear;
-  }
-
-  
-  /* .social-media {
-    height: 7rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  } */
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-    right: 0;
-  }
-}
-
-@media (max-width: 798px) {
-  .main-nav {
-    height: 6rem;
-    grid-template-columns: 1rem 2fr 1fr 1fr 1rem;
-  }
-
-  .logo,
-  .social-media ul {
-    height: 6rem;
-  }
-
-  /* .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  } */
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-}
-
-@media (max-width: 520px) {
-  .main-nav {
-    height: 6rem;
-    grid-template-columns: 1rem 4fr 1fr 1fr 1rem;
-  }
-
-  .logo,
-  .social-media ul {
-    height: 6rem;
-  }
-
-  .logo h2 {
-    font-size: 2rem;
-  }
-
-  .social-media {
-    height: 6rem;
-    display: flex;
-    justify-self: end;
-    align-items: center;
-  }
-
-  .social-media .hamburger-menu {
-    display: block;
-    font-size: 2.5rem;
-  }
-
-  /* hero section  */
-
-  
+     
 }
