--- a/src/components/LandingPage/index.css
+++ b/src/components/LandingPage/index.css
@@ -1,8 +1,7 @@
-.login-form{
-    width: 100%;
-    max-width: 500px;
-    padding: 15px;
-    margin: auto;
-    height: 100%;
-    background-color: #b5b5b5;
+.landing-img-dev{
+   
+    height: 100vh;
+    text-align: left;
+
+  
 }
